--- a/随手记/ViewController.xib
+++ b/随手记/ViewController.xib
@@ -6,6 +6,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ViewController">
             <connections>
+                <outlet property="arrowTool" destination="SzU-Xe-HBW" id="0r3-Ml-hPG"/>
                 <outlet property="view" destination="1" id="3"/>
             </connections>
         </placeholder>
@@ -14,23 +15,33 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ahN-L4-ndR">
+                <toolbar opaque="NO" clearsContextBeforeDrawing="NO" tag="300" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ahN-L4-ndR">
                     <rect key="frame" x="0.0" y="524" width="320" height="44"/>
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                     <items>
-                        <barButtonItem image="main_nav_arrow.png" width="40" id="zRv-IZ-KPQ">
-                            <inset key="imageInsets" minX="0.0" minY="0.0" maxX="18" maxY="0.0"/>
-                            <connections>
-                                <action selector="arrow:" destination="-1" id="wtz-kk-q2e"/>
-                            </connections>
+                        <barButtonItem tag="100" width="40" id="TLQ-sb-7tq">
+                            <button key="customView" opaque="NO" tag="101" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="SzU-Xe-HBW">
+                                <rect key="frame" x="16" y="2" width="40" height="40"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" image="main_nav_arrow.png" backgroundImage="main_nav_circle.png">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="arrow:" destination="-1" eventType="touchUpInside" id="ROK-R7-wHh"/>
+                                </connections>
+                            </button>
                         </barButtonItem>
                         <barButtonItem image="nav_year_trans.png" width="40" id="POx-2L-8fQ">
-                            <inset key="imageInsets" minX="0.0" minY="0.0" maxX="12" maxY="0.0"/>
+                            <inset key="imageInsets" minX="0.0" minY="0.0" maxX="2" maxY="0.0"/>
                         </barButtonItem>
-                        <barButtonItem image="nav_account.png" width="40" id="Z3C-TN-gZE"/>
-                        <barButtonItem image="nav_report.png" width="40" id="oTI-nj-VOJ"/>
+                        <barButtonItem image="nav_account.png" width="40" id="Z3C-TN-gZE">
+                            <inset key="imageInsets" minX="6" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </barButtonItem>
+                        <barButtonItem image="nav_report.png" width="40" id="oTI-nj-VOJ">
+                            <inset key="imageInsets" minX="6" minY="0.0" maxX="0.0" maxY="0.0"/>
+                        </barButtonItem>
                         <barButtonItem image="nav_budget.png" width="40" id="vwI-rl-Cdf">
-                            <inset key="imageInsets" minX="5" minY="0.0" maxX="0.0" maxY="0.0"/>
+                            <inset key="imageInsets" minX="10" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </barButtonItem>
                         <barButtonItem image="nav_setting.png" width="40" id="imw-co-Psg">
                             <inset key="imageInsets" minX="14" minY="0.0" maxX="0.0" maxY="0.0"/>
@@ -47,7 +58,8 @@
         </view>
     </objects>
     <resources>
-        <image name="main_nav_arrow.png" width="20" height="17"/>
+        <image name="main_nav_arrow.png" width="17" height="17"/>
+        <image name="main_nav_circle.png" width="60" height="60"/>
         <image name="nav_account.png" width="35" height="35"/>
         <image name="nav_budget.png" width="35" height="35"/>
         <image name="nav_report.png" width="35" height="35"/>
