--- a/随手记/LeftModuleViewController.xib
+++ b/随手记/LeftModuleViewController.xib
@@ -19,6 +19,35 @@
                     <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                     <items>
                         <barButtonItem image="nav_edit_btn.png" width="40" id="yon-wV-D90"/>
+                        <barButtonItem width="42" style="plain" systemItem="fixedSpace" id="Yhr-Y9-GhC"/>
+                        <barButtonItem width="42" style="plain" systemItem="fixedSpace" id="lPi-IL-9XF"/>
+                        <barButtonItem style="plain" id="uS2-ly-5ZR">
+                            <view key="customView" contentMode="scaleToFill" id="sMw-SW-jO6">
+                                <rect key="frame" x="150" y="0.0" width="155" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <subviews>
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="当前账本" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dJZ-Ba-8la">
+                                        <rect key="frame" x="6" y="7" width="68" height="12"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                        <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="默认账本" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qXq-im-Syi">
+                                        <rect key="frame" x="7" y="23" width="68" height="14"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="suite_bg_for_travel.png" translatesAutoresizingMaskIntoConstraints="NO" id="EqR-Sh-2Ye">
+                                        <rect key="frame" x="83" y="5" width="22" height="32"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                            </view>
+                        </barButtonItem>
                     </items>
                     <color key="barTintColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                 </toolbar>
@@ -31,5 +60,6 @@
     </objects>
     <resources>
         <image name="nav_edit_btn.png" width="25" height="27"/>
+        <image name="suite_bg_for_travel.png" width="246" height="290"/>
     </resources>
 </document>
